<resources>
    <string name="app_name" translatable="false">APK Kit</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_sort">排序</string>
    <string name="action_view">切换视图</string>
    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_continue">继续</string>
    <string name="action_new_folder">新建文件夹</string>
    <string name="action_name_ascend">名称升序(A→Z)</string>
    <string name="action_name_descend">名称降序(Z→A)</string>
    <string name="action_help">帮助</string>
    <string name="action_ap">热点配置</string>
    <string name="action_back_to_top">返回顶部</string>
    <string name="action_file_info">文件信息</string>
    <string name="nav_file_receive">接收文件</string>
    <string name="nav_about">关于</string>
    <string name="dialog_loading_title">正在载入</string>
    <string name="dialog_sort_appitem_title">排序(应用)</string>
    <string name="dialog_sort_import_item_title">排序(安装包)</string>
    <string name="permission_write">需要授权读取/写入存储权限</string>
    <string name="permission_grant">立即授权</string>
    <string name="toast_import_check_duplication_continue">再点击一次确定继续，将覆写已存在的文件</string>
    <string name="main_card_show_system_app">显示系统应用</string>
    <string name="main_card_remaining_storage">剩余存储空间</string>
    <string name="bottom_export">导出</string>
    <string name="bottom_import">导入</string>
    <string name="select_all_change">全选/反选</string>
    <string name="bottom_share">分享</string>
    <string name="bottom_more">更多</string>
    <string name="bottom_delete">删除</string>
    <string name="more_copy_package_names">复制包名</string>
    <string name="more_file_rename">重命名</string>
    <string name="hint_file_rename">输入文件名或变量</string>
    <string name="main_page_export">应用</string>
    <string name="main_page_import">安装包</string>
    <string name="activity_package_detail">使用APK Kit安装</string>
    <string name="activity_package_detail_blank">没有得到有效的文件数据，请重新尝试打开</string>
    <string name="activity_package_detail_apk_attention">请使用其他打包应用来安装APK</string>
    <string name="activity_detail_run">运行</string>
    <string name="activity_detail_export">导出</string>
    <string name="activity_detail_share">分享</string>
    <string name="activity_detail_permission">权限</string>
    <string name="activity_detail_system_detail">详情</string>
    <string name="activity_detail_market">在应用商店查看</string>
    <string name="activity_detail_uninstall">卸载</string>
    <string name="activity_detail_package_name">应用包名</string>
    <string name="activity_detail_app_label">应用名</string>
    <string name="activity_detail_version_name">版本名</string>
    <string name="activity_detail_version_code">版本号</string>
    <string name="activity_detail_package_size">应用包大小</string>
    <string name="activity_detail_first_install_time">首次安装时间</string>
    <string name="activity_detail_last_update_time">上次更新时间</string>
    <string name="activity_detail_installer_name">安装来源</string>
    <string name="activity_detail_minimum_api">最低API</string>
    <string name="activity_detail_target_api">目标API</string>
    <string name="activity_detail_is_system_app">系统应用</string>
    <string name="activity_detail_uid" translatable="false">UID</string>
    <string name="activity_detail_path">路径/Uri</string>
    <string name="activity_detail_launch_intent">主启动类</string>
    <string name="activity_detail_install">安装</string>
    <string name="activity_detail_delete">删除</string>
    <string name="activity_detail_file_name">文件名</string>
    <string name="activity_detail_file_size">文件大小</string>
    <string name="activity_detail_last_modified">最后修改</string>
    <string name="activity_detail_nothing_checked">请勾选要安装的数据</string>
    <string name="activity_detail_wait_loading">请等待，压缩包读取中，可能会花费些时间</string>
    <string name="activity_detail_grant_data">授权Data</string>
    <string name="activity_detail_grant_obb">授权Obb</string>
    <string name="activity_detail_grant_data_introduction">即将开始授权此应用的data目录，请在系统文件管理器界面中确认目录“Android/data/%s”并点击“使用此文件夹”</string>
    <string name="activity_detail_grant_obb_introduction">即将开始授权此应用的obb目录，请在系统文件管理器界面中确认目录“Android/obb/%s”并点击“使用此文件夹”</string>
    <string name="activity_detail_install_attention">请使用系统默认软件包安装程序进行安装</string>
    <string name="activity_detail_permission_create_folder_attention">授权时对于不存在的data或obb路径需要手动创建</string>
    <string name="activity_detail_signature_head">签名信息</string>
    <string name="activity_detail_signature_issuer">证书发行者</string>
    <string name="activity_detail_signature_subject">证书所有者</string>
    <string name="activity_detail_signature_serial">序列号</string>
    <string name="activity_detail_signature_start">起始时间</string>
    <string name="activity_detail_signature_end">结束时间</string>
    <string name="activity_detail_signature_md5">MD5</string>
    <string name="activity_detail_signature_sha1">SHA1</string>
    <string name="activity_detail_signature_sha256">SHA256</string>
    <string name="activity_detail_native_library">本地库</string>
    <string name="activity_detail_hash_head">文件哈希值</string>
    <string name="activity_detail_hash_md5">MD5</string>
    <string name="activity_detail_hash_sha1">SHA1</string>
    <string name="activity_detail_hash_sha256">SHA256</string>
    <string name="activity_detail_hash_crc32">CRC32</string>
    <string name="activity_settings_title">设置</string>
    <string name="activity_settings_path">导出路径</string>
    <string name="activity_settings_rules">导出规则</string>
    <string name="activity_settings_share_mode">分享模式</string>
    <string name="activity_settings_package_scope">安装包范围</string>
    <string name="activity_settings_package_exclude">安装包过滤</string>
    <string name="activity_settings_package_exclude_description">过滤无data,obb,apk内容的压缩包</string>
    <string name="activity_settings_extension">压缩包扩展名</string>
    <string name="activity_settings_grant">读写授权</string>
    <string name="activity_settings_grant_att">读写存储data,obb授权</string>
    <string name="activity_settings_night_mode">夜间模式</string>
    <string name="activity_settings_loading_options">读取项</string>
    <string name="activity_settings_port_number">端口号</string>
    <string name="activity_settings_port_number_hint">输入端口号(默认6565)</string>
    <string name="activity_settings_port_unknown">无效的数字</string>
    <string name="activity_settings_port_invalid">请输入1024~65535之间的数字</string>
    <string name="activity_settings_port_number_attention">大多数情况下，不需要手动修改本设置去更改端口号。只有当其他程序占用端口号6565
        导致本程序绑定端口失败时才需要手动调整端口号。\n\n局域网共享文件时，双方设置的端口号必须相同，否则将检测不到设备。\n</string>
    <string name="activity_settings_device_name">设备名称</string>
    <string name="dialog_settings_device_name_head">设置一个名称，用于在局域网共享文件时向文件发送方展示。</string>
    <string name="dialog_settings_package_name_split_head">输入批量复制应用包名时的分隔内容</string>
    <string name="dialog_settings_device_name_hint">输入名称</string>
    <string name="dialog_settings_package_name_split">输入分隔内容</string>
    <string name="dialog_settings_device_name_invalid">请输入名称</string>
    <string name="activity_settings_package_name_separator">包名分隔内容</string>
    <string name="activity_settings_language" translatable="false">Language</string>
    <string name="activity_settings_about">关于</string>
    <string name="dialog_grant_attention_title">提示</string>
    <string name="activity_grant_data">data授权</string>
    <string name="activity_grant_obb">obb授权</string>
    <string name="dialog_grant_no_need">当前Android版本无需使用此方式来访问data或者obb，如果能够正常查看data/obb大小或者导入data/obb数据无需此操作，是否继续？</string>
    <string name="dialog_grant_attention_data">即将开始授权data目录读写权限，请在打开的系统文件管理器检查是否为“根存储/Android/data”目录并点击“使用此文件夹”来授权</string>
    <string name="dialog_grant_attention_obb">即将开始授权obb目录读写权限，请在打开的系统文件管理器检查是否为“根存储/Android/obb”目录并点击“使用此文件夹”来授权</string>
    <string name="dialog_grant_warn">可能没有选择到正确的data/obb目录下，是否继续？</string>
    <string name="dialog_grant_toast_data">检查当前data路径并点击“使用此文件夹”</string>
    <string name="dialog_grant_toast_obb">检查当前obb路径并点击“使用此文件夹”</string>
    <string name="dialog_grant_higher_api">Android 13 及以上版本需要单独对应用进行data和obb授权，此页面设置可能无效。</string>
    <string name="permission_granted">已授权</string>
    <string name="permission_denied">未授权</string>
    <string name="dialog_grant_first_use">当前未获取到访问data或obb数据的权限，是否跳转至授权页？</string>
    <string name="dialog_pack_permission_title">路径授权</string>
    <string name="package_detail_install_permission_att">包含未授权的内容，请检查权限</string>
    <string name="activity_folder_selector_title">选择路径</string>
    <string name="activity_folder_selector_select_storage">选择存储</string>
    <string name="activity_folder_selector_item_internal">主存储</string>
    <string name="activity_folder_selector_item_external">外置存储</string>
    <string name="activity_folder_selector_item_others">选择其他外置存储</string>
    <string name="activity_folder_selector_blank_folder">没有文件夹</string>
    <string name="activity_folder_selector_external_title">外置存储</string>
    <string name="activity_folder_selector_external_message">请在左侧边栏中选择一个外置存储，然后点击“选择”来授权读取外置存储</string>
    <string name="activity_folder_selector_external_error">可能没有选择到外置存储的路径上，请确认是否使用此路径作为外置存储路径</string>
    <string name="activity_attention_select_folder">请选择文件夹</string>
    <string name="share_mode_direct">直接分享</string>
    <string name="share_mode_direct_att">直接分享应用源APK文件，无需导出，但不能自定义文件名，不能分享打包有Data或Obb的zip文件</string>
    <string name="share_mode_export">导出后分享</string>
    <string name="dialog_loading_selection_att">勾选项越多，加载速度越慢 -_-</string>
    <string name="dialog_loading_selection_permissions">权限(uses-permissions)</string>
    <string name="dialog_loading_selection_activities">活动组件(activity)</string>
    <string name="dialog_loading_selection_services">服务(service)</string>
    <string name="dialog_loading_selection_providers">内容提供者(providers)</string>
    <string name="dialog_loading_selection_receivers">广播接收器(receiver)</string>
    <string name="dialog_loading_selection_static_loaders">自启接收器(会拖慢加载速度)</string>
    <string name="dialog_loading_selection_signature">APK签名</string>
    <string name="dialog_loading_selection_file_hash">文件哈希值</string>
    <string name="dialog_sort_default">默认</string>
    <string name="dialog_sort_ascending_name">按名称升序（从A到Z）</string>
    <string name="dialog_sort_descending_name">按名称降序（从Z到A）</string>
    <string name="dialog_sort_ascending_size">按大小升序（从小到大）</string>
    <string name="dialog_sort_descending_size">按大小降序（从大到小）</string>
    <string name="dialog_sort_ascending_modified_time">按修改时间升序（从旧到新）</string>
    <string name="dialog_sort_descending_modified_time">按修改时间降序（从新到旧）</string>
    <string name="dialog_filename_variables">插入变量</string>
    <string name="dialog_filename_button_appname">应用名称(?N)</string>
    <string name="dialog_filename_button_packagename">包名(?P)</string>
    <string name="dialog_filename_button_version">版本(?V)</string>
    <string name="dialog_filename_button_versioncode">版本号(?C)</string>
    <string name="dialog_filename_button_year">年(?Y)</string>
    <string name="dialog_filename_button_month">月(?M)</string>
    <string name="dialog_filename_button_day_of_month">日(?D)</string>
    <string name="dialog_filename_button_hour_of_day">时(?H)</string>
    <string name="dialog_filename_button_minute">分(?I)</string>
    <string name="dialog_filename_button_second">秒(?S)</string>
    <string name="dialog_filename_button_sequence_number">序号(?A)</string>
    <string name="dialog_filename_rename_warn_no_variables">没有独特变量(序号)，多文件重命名可能会出现错误！</string>
    <string name="activity_receive_att">运行日志</string>
    <string name="activity_receive_refresh"><u>对方没检测到？（重发数据报）</u></string>
    <string name="dialog_compress_extension_att">*此选项旨在更改导出压缩包的扩展名，文件内容仍为zip格式不会改变</string>
    <string name="hint_compress_custom">输入扩展名(小写或数字)</string>
    <string name="word_zip">zip</string>
    <string name="word_xapk">xapk</string>
    <string name="word_preview">预览</string>
    <string name="word_ap_mode">热点模式</string>
    <string name="word_custom">自定义</string>
</resources>